--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.0-rc.2"
   },
   "dependencies": {
-    "dt-angular": "~1.2.16"
+    "dt-angular": "~1.2.16",
+    "ngCordova": "~0.1.14-alpha"
   }
 }
