--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-angular-templatecache": "^1.6.0",
+    "gulp-load-plugins": "^0.9.0",
+    "gulp-size": "^1.2.1",
+    "gulp-typescript": "^2.6.0",
     "gulp-util": "^2.2.14",
     "require-dir": "^0.3.0",
     "shelljs": "^0.3.0"
