--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bower": "^1.3.3",
     "gulp-angular-templatecache": "^1.6.0",
     "gulp-load-plugins": "^0.9.0",
+    "gulp-minify-html": "^1.0.2",
     "gulp-size": "^1.2.1",
+    "gulp-task-listing": "^1.0.0",
     "gulp-typescript": "^2.6.0",
     "gulp-util": "^2.2.14",
     "require-dir": "^0.3.0",
